--- a/admin.html
+++ b/admin.html
@@ -2284,10 +2284,10 @@
                     </div>
                     
                     <div class="form-group">
-                        <label>المفتاح (آخر 10 أحرف فقط):</label>
+                        <label>المفتاح :</label>
                         <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 5px;">
                             <input type="text" id="newStorageKeySuffix" 
-                                   placeholder="أدخل آخر 10 أحرف من المفتاح"
+                                   placeholder="أدخل المفتاح هنا"
                                    maxlength="10"
                                    style="flex: 1;"
                                    oninput="updateStorageKeySuffixLength()">
