--- a/admin.html
+++ b/admin.html
@@ -2268,7 +2268,7 @@
             <div class="section">
                 <h3><i class="fas fa-key"></i> إدارة مفاتيح التخزين للمستودع</h3>
                 <p style="color: var(--text-light); margin-bottom: 20px;">
-                    هنا يمكنك إدارة  مفتاح التخزين  المستودع. المفتاح يسمح بالوصول إلى مستودعك المحدد على Serveur.
+                    هنا يمكنك إدارة  مفتاح التخزين ، المفتاح يسمح بالوصول إلى مستودعك الشخصي المحدد على Serveur.
                     <br><strong>ملاحظة:</strong> أدخل فقط المفتاح.
                 </p>
                 
