--- a/admin.html
+++ b/admin.html
@@ -1594,7 +1594,7 @@
         </button>
         
         <p style="margin-top: 20px; color: var(--text-light); font-size: 12px;">
-            كلمة المرور الافتراضية: <strong>4*45D6A8</strong>
+            كلمة المرور الافتراضية: <strong></strong>
         </p>
     </div>
 
