--- a/admin.html
+++ b/admin.html
@@ -1798,8 +1798,8 @@
                     hour: '2-digit',
                     minute: '2-digit'
                 };
-                syncStatus.textContent = `آخر تحديث: ${date.toLocaleDateString('ar-EG', options)}`;
-                document.getElementById('lastUpdate').textContent = date.toLocaleDateString('ar-EG');
+                syncStatus.textContent = `آخر تحديث: ${date.toLocaleDateString('fr-FR', options)}`;
+                document.getElementById('lastUpdate').textContent = date.toLocaleDateString('fr-FR');
             } else {
                 syncStatus.textContent = 'لم يتم المزامنة بعد';
                 document.getElementById('lastUpdate').textContent = '-';
