--- a/admine.html
+++ b/admine.html
@@ -3133,7 +3133,7 @@
                     <div class="form-group">
                         <label></label>
                         <input type="text" class="form-control" id="storeTitle" 
-                               value="${CONFIG.STORE_INFO?.storeTitle || '👑 أحدث موديلات الأطفال'}" 
+                               value="${CONFIG.STORE_INFO?.storeTitle || ' أحدث موديلات الأطفال'}" 
                                onchange="updateStoreField('storeTitle', this.value)">
                     </div>
                     
