--- a/admine.html
+++ b/admine.html
@@ -1765,13 +1765,13 @@
                             <i class="fas fa-share-alt"></i> التواصل
                         </button>
                         <button class="tab" onclick="switchSettingsTab('design')">
-                            <i class="fas fa-palette"></i> التصميم
+                            <i class="fas fa-palette"></i> نظام الخصم
                         </button>
                         <button class="tab" onclick="switchSettingsTab('sizes-colors')">
                             <i class="fas fa-ruler"></i> القياسات والألوان
                         </button>
                         <button class="tab" onclick="switchSettingsTab('advanced')">
-                            <i class="fas fa-sliders-h"></i> متقدم
+                            <i class="fas fa-sliders-h"></i> جدول الطلبات
                         </button>
                     </div>
                     
