--- a/admine.html
+++ b/admine.html
@@ -3138,7 +3138,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label>إختصاص المتجر </label>
+                        <label>(عنوان المتجر)إختصاص المتجر </label>
                         <input type="text" class="form-control" id="storeTagline" 
                                value="${CONFIG.STORE_INFO?.tagline || 'متجر أفخم الملابس'}" 
                                onchange="updateStoreField('tagline', this.value)">
