--- a/admine.html
+++ b/admine.html
@@ -1499,7 +1499,7 @@
                     <div class="user-avatar">م</div>
                     <div>
                         <div style="font-weight: 600;">المدير</div>
-                        <div style="font-size: 12px; color: var(--gray);">مشرف النظام</div>
+                        <div style="font-size: 12px; color: var(--gray);">بن أكراب أحسن</div>
                     </div>
                 </div>
             </div>
@@ -1551,7 +1551,7 @@
                 <div id="dashboard-home" class="tab-content active">
                     <div class="content-header">
                         <h2><i class="fas fa-tachometer-alt"></i> نظرة عامة</h2>
-                        <p>مرحباً بك في لوحة تحكم المتجر. هنا يمكنك إدارة جميع جوانب متجرك.</p>
+                        <p>مرحبا بك في لوحة تحكم المتجر & هنا يمكنك إدارة جميع جوانب متجرك.</p>
                     </div>
                     
                     <!-- الإحصائيات -->
