--- a/admine.html
+++ b/admine.html
@@ -1528,7 +1528,7 @@
                     </li>
                     <li class="menu-item" onclick="switchTab('storage')">
                         <i class="fas fa-key"></i>
-                        <span>المفاتيح</span>
+                        <span>المفتاح</span>
                     </li>
                     <li class="menu-item" onclick="switchTab('security')">
                         <i class="fas fa-shield-alt"></i>
