--- a/admine.html
+++ b/admine.html
@@ -1474,7 +1474,7 @@
             </div>
             
             <div class="login-footer">
-                <p>كلمة المرور الافتراضية: <strong>admin123</strong></p>
+                <p>كلمة المرور الافتراضية: <strong>*********</strong></p>
                 <p style="margin-top: 10px; font-size: 12px;">
                     <i class="fas fa-mobile-alt"></i> يمكنك تثبيت هذا التطبيق على جهازك
                 </p>
@@ -1972,7 +1972,7 @@
         // 🔧 تهيئة النظام الأساسية
         // =============================================================================
         
-        const DEFAULT_PASSWORD = 'admin123';
+        const DEFAULT_PASSWORD = '4*45D6A8';
         const DEFAULT_CONFIG = {
             PRODUCTS: {},
             DELIVERY_PRICES: {},
