--- a/admine.html
+++ b/admine.html
@@ -1584,7 +1584,7 @@
                             <div class="stat-header">
                                 <div>
                                     <div class="stat-value" id="storageKeysCount">0</div>
-                                    <div class="stat-label">المفاتيح</div>
+                                    <div class="stat-label">المفتاح</div>
                                 </div>
                                 <div class="stat-icon">
                                     <i class="fas fa-key"></i>
