--- a/admine.html
+++ b/admine.html
@@ -1512,7 +1512,7 @@
                 <ul class="sidebar-menu">
                     <li class="menu-item active" onclick="switchTab('dashboard-home')">
                         <i class="fas fa-home"></i>
-                        <span>الرئيسية</span>
+                        <span>الصفحة الرئيسية</span>
                     </li>
                     <li class="menu-item" onclick="switchTab('products')">
                         <i class="fas fa-box"></i>
