--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="store-config.json"></script>
+    fetch('store-config.json')
+  .then(response => response.json())
+  .then(CONFIG => {
+    // استخدام CONFIG هنا
+  });
     <style>
         /* ===== إعادة التعيين والأساسيات ===== */
         :root {
