--- a/admindl.html
+++ b/admindl.html
@@ -2245,7 +2245,7 @@
             lastSyncTime = new Date();
             const syncStatus = document.getElementById('syncStatus');
             if (syncStatus) {
-                syncStatus.innerHTML = `<i class="fas fa-sync"></i> آخر مزامنة: ${lastSyncTime.toLocaleTimeString('ar-SA')}`;
+                syncStatus.innerHTML = `<i class="fas fa-sync"></i> آخر مزامنة: ${lastSyncTime.toLocaleTimeString('fr-FR')}`;
                 syncStatus.style.color = 'var(--info)';
             }
         }
@@ -3217,7 +3217,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label>شعار المتجر (إختصاص المتجر)</label>
+                        <label>عنوان المتجر</label>
                         <input type="text" class="form-control" id="storeTagline" 
                                value="${CONFIG.STORE_INFO?.tagline || 'متجر أفخم الملابس'}" 
                                onchange="updateStoreField('tagline', this.value)">
