--- a/admindl.html
+++ b/admindl.html
@@ -2424,7 +2424,7 @@
             
             if (lastGitHubSync) {
                 const date = new Date(lastGitHubSync);
-                statusText += ` | آخر مزامنة مع GitHub: ${date.toLocaleDateString('fr-FR')}`;
+                statusText += ` | آخر مزامنة مع السرفر: ${date.toLocaleDateString('fr-FR')}`;
             }
             
             if (!statusText) {
