--- a/adminpoint8.html
+++ b/adminpoint8.html
@@ -2850,7 +2850,7 @@
             lastSyncTime = new Date();
             const syncStatus = document.getElementById('syncStatus');
             if (syncStatus) {
-                syncStatus.innerHTML = `<i class="fas fa-sync"></i> آخر مزامنة: ${lastSyncTime.toLocaleTimeString('ar-SA')}`;
+                syncStatus.innerHTML = `<i class="fas fa-sync"></i> آخر مزامنة: ${lastSyncTime.toLocaleTimeString('fr-FR')}`;
                 syncStatus.style.color = 'var(--info)';
             }
         }
