--- a/adminpoint8.html
+++ b/adminpoint8.html
@@ -5814,7 +5814,7 @@
                             <li>الأيام تتناقص من 30 إلى 0 ثم تعود إلى 30</li>
                             <li>500 نقطة تظهر في العداد مباشرة بعد انقضاء 30 يوم</li>
                             <li>يتم استرجاع الرصيد والأيام المتبقية تلقائياً</li>
-                            <li>يتم حفظ الرصيد في config.json</li>
+                            <li>يتم حفظ الرصيد في config</li>
                         </ul>
                     </div>
                 </div>
