--- a/adminos12.html
+++ b/adminos12.html
@@ -6583,8 +6583,7 @@
                         
                         const repo = getDefaultRepo();
                         if (!repo) {
-                            showNotification('لم يتم إعداد
-
+              showNotification('لم يتم إعداد مفتاح التخزين', 'error');
 
                               const storageKeyConfig = storageKeys[repo];
                         if (!storageKeyConfig) {
