--- a/adminpoint.html
+++ b/adminpoint.html
@@ -1564,7 +1564,7 @@
             <div class="header-right">
                 <div id="securityCounter" class="security-counter">
                     <i class="fas fa-shield-alt"></i>
-                    <span id="counterValue">500</span> نقطة
+                    <span id="counterValue"></span> 
                 </div>
                 <div class="sync-status" id="syncStatus"></div>
                 <button class="btn btn-sm btn-info" onclick="toggleFullscreen()" title="ملء الشاشة">
@@ -5072,27 +5072,9 @@
                         <div style="font-size: 48px; color: var(--primary); font-weight: bold; margin-bottom: 10px;">
                             ${getSecurityPoints()}
                         </div>
-                        <div style="color: var(--gray);">نقطة متبقية</div>
+                        <div style="color: var(--gray);"></div>
                         
-                        <div style="margin-top: 20px; padding: 15px; background: var(--light); border-radius: var(--radius);">
-                            <h4 style="color: var(--dark); margin-bottom: 10px;">تفاصيل الخصم:</h4>
-                            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; text-align: right;">
-                                <div>رفع صورة:</div>
-                                <div><span class="badge badge-info">1 نقطة</span></div>
-                                <div>مزامنة البيانات:</div>
-                                <div><span class="badge badge-info">2 نقطة</span></div>
-                                <div>حفظ ومزامنة:</div>
-                                <div><span class="badge badge-info">2 نقطة</span></div>
-                                <div>تنظيف الصور:</div>
-                                <div><span class="badge badge-info">1 نقطة</span></div>
-                                <div>حذف صورة:</div>
-                                <div><span class="badge badge-info">1 نقطة</span></div>
-                                <div>إضافة منتج:</div>
-                                <div><span class="badge badge-info">1 نقطة</span></div>
-                                <div>مزامنة كاملة:</div>
-                                <div><span class="badge badge-info">2 نقطة</span></div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             `;
