--- a/adminpoint9.html
+++ b/adminpoint9.html
@@ -3112,7 +3112,7 @@
             
             if (lastGitHubSync) {
                 if (statusText) statusText += ' | ';
-                statusText += `Dernière synchronisation GitHub: ${formatDate(lastGitHubSync)}`;
+                statusText += `Dernière synchronisation Serveur: ${formatDate(lastGitHubSync)}`;
             }
             
             if (!statusText) {
