--- a/adminfrançais.html
+++ b/adminfrançais.html
@@ -1674,7 +1674,7 @@
                     <div class="user-avatar">A</div>
                     <div>
                         <div style="font-weight: 600;">Manager</div>
-                        <div style="font-size: 12px; color: var(--gray);">Ben Akrab Ahcen</div>
+                        <div style="font-size: 12px; color: var(--gray);">BENAKRAB Ahcene</div>
                     </div>
                 </div>
             </div>
